--- a/classif.ipynb
+++ b/classif.ipynb
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +742,18 @@
     "    def __init__(self, corpus, size=300, window=8, min_count=1, sg=1, iter=5, callbacks=[]):\n",
     "        super().__init__(corpus)\n",
     "\n",
-    "        self.representation = gensim.models.word2vec.Word2Vec(self.corpus, vector_size=size, window=window, min_count=min_count, sg=sg, epochs=iter, callbacks=callbacks)"
+    "        self.representation = gensim.models.word2vec.Word2Vec(self.corpus, vector_size=size, window=window, min_count=min_count, sg=sg, epochs=iter, callbacks=callbacks)\n",
+    "\n",
+    "    def get_average_doc_embedding(self, document):\n",
+    "        embeddings = []\n",
+    "        for word in document:\n",
+    "            if word in self.representation.wv:\n",
+    "                embeddings.append(self.representation.wv[word])\n",
+    "        \n",
+    "        if len(embeddings) > 0:\n",
+    "            return np.mean(embeddings, axis=0)\n",
+    "        else:\n",
+    "            return np.zeros(self.representation.vector_size)"
    ]
   },
   {
@@ -1030,6 +1041,37 @@
    ],
    "source": [
     "w2v_1 = Word2Vec(d.pp_df['ppBody'], callbacks=[epoch_logger])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w2v_1.representation.save('./Word-Representations/w2v_1.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Word2Vec' object has no attribute 'get_average_doc_embedding'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[54], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m corpus_embeddings \u001b[39m=\u001b[39m [w2v_1\u001b[39m.\u001b[39mget_average_doc_embedding(doc) \u001b[39mfor\u001b[39;00m doc \u001b[39min\u001b[39;00m d\u001b[39m.\u001b[39mpp_df[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]]\n",
+      "Cell \u001b[0;32mIn[54], line 1\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0m corpus_embeddings \u001b[39m=\u001b[39m [w2v_1\u001b[39m.\u001b[39;49mget_average_doc_embedding(doc) \u001b[39mfor\u001b[39;00m doc \u001b[39min\u001b[39;00m d\u001b[39m.\u001b[39mpp_df[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Word2Vec' object has no attribute 'get_average_doc_embedding'"
+     ]
+    }
+   ],
+   "source": [
+    "corpus_embeddings = [w2v_1.get_average_doc_embedding(doc) for doc in d.pp_df['ppBody']]"
    ]
   },
   {
