Word rep saving and loading

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -734,15 +734,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Word2Vec(WordRep):\n",
-    "    def __init__(self, corpus, size=300, window=8, min_count=1, sg=1, iter=5, callbacks=[]):\n",
+    "    def __init__(self, corpus):\n",
     "        super().__init__(corpus)\n",
-    "\n",
+    "    \n",
+    "    def create(self, name, size=300, window=8, min_count=1, sg=1, iter=5, callbacks=[]):\n",
     "        self.representation = gensim.models.word2vec.Word2Vec(self.corpus, vector_size=size, window=window, min_count=min_count, sg=sg, epochs=iter, callbacks=callbacks)\n",
+    "        self.representation.save(f'./Word-Representations/{name}.model')\n",
+    "\n",
+    "    def load(self, path):\n",
+    "        self.representation = gensim.models.word2vec.Word2Vec.load(path)\n",
     "\n",
     "    def get_average_doc_embedding(self, document):\n",
     "        embeddings = []\n",
@@ -1018,6 +1023,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the following to train a model:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -1040,16 +1052,49 @@
     }
    ],
    "source": [
-    "w2v_1 = Word2Vec(d.pp_df['ppBody'], callbacks=[epoch_logger])"
+    "# w2v_1 = Word2Vec(d.pp_df['ppBody'], callbacks=[epoch_logger])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model can be saved and loaded like so:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w2v_1.representation.save('./Word-Representations/w2v_1.model')"
+    "# w2v_1.representation.save('./Word-Representations/w2v_1.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w2v_1 = gensim.models.Word2Vec.load('./Word-Representations/w2v_1.model')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or by instantiating a new `Word2Vec` object and calling either create or load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w2v_1 = Word2Vec(d.pp_df['ppBody'])\n",
+    "w2v_1.load('./Word-Representations/w2v_1.model')"
    ]
   },
   {
