Memory issues getting average embedding

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -64,6 +64,7 @@
     "# word embeddings\n",
     "import gensim\n",
     "import gensim.downloader as gensim_api\n",
+    "from gensim.models.word2vec import Word2Vec as w2v\n",
     "\n",
     "#graphing\n",
     "import matplotlib.pyplot as plt\n",
@@ -289,10 +290,10 @@
     "#download wordnet for lemmatization\n",
     "#uncomment appropriate line if you get error: \"Resource wordnet not found.\", \"Resource punkt not found.\", etc...\n",
     "\n",
-    "nltk.download('wordnet')\n",
-    "nltk.download('punkt')\n",
-    "nltk.download('stopwords')\n",
-    "nltk.download('averaged_perceptron_tagger')"
+    "# nltk.download('wordnet')\n",
+    "# nltk.download('punkt')\n",
+    "# nltk.download('stopwords')\n",
+    "# nltk.download('averaged_perceptron_tagger')"
    ]
   },
   {
@@ -347,7 +348,7 @@
     "#download spacy dataset\n",
     "#uncomment the line below if you get error \"Can't find model 'en_core_web_sm'\"\n",
     "# !python -m spacy download en_core_web_sm\n",
-    "!python3 -m spacy download en_core_web_sm\n",
+    "# !python3 -m spacy download en_core_web_sm\n",
     "\n",
     "nlp = spacy.load('en_core_web_sm')"
    ]
@@ -743,11 +744,11 @@
     "        super().__init__(corpus)\n",
     "    \n",
     "    def create(self, name, size=300, window=8, min_count=1, sg=1, iter=5, callbacks=[]):\n",
-    "        self.representation = gensim.models.word2vec.Word2Vec(self.corpus, vector_size=size, window=window, min_count=min_count, sg=sg, epochs=iter, callbacks=callbacks)\n",
+    "        self.representation = w2v(self.corpus, vector_size=size, window=window, min_count=min_count, sg=sg, epochs=iter, callbacks=callbacks)\n",
     "        self.representation.save(f'./Word-Representations/{name}.model')\n",
     "\n",
     "    def load(self, path):\n",
-    "        self.representation = gensim.models.word2vec.Word2Vec.load(path)\n",
+    "        self.representation = w2v.load(path)\n",
     "\n",
     "    def get_average_doc_embedding(self, document):\n",
     "        embeddings = []\n",
@@ -1001,7 +1002,6 @@
     "class EpochLogger(CallbackAny2Vec):\n",
     "    '''Callback to log information about training'''\n",
     "\n",
-    "\n",
     "    def __init__(self):\n",
     "        self.epoch = 0\n",
     "\n",
@@ -1052,39 +1052,15 @@
     }
    ],
    "source": [
-    "# w2v_1 = Word2Vec(d.pp_df['ppBody'], callbacks=[epoch_logger])"
+    "# w2v_1 = Word2Vec(d.pp_df['ppBody'])\n",
+    "# w2v_1.create('w2v_1', callbacks=[epoch_logger])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model can be saved and loaded like so:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# w2v_1.representation.save('./Word-Representations/w2v_1.model')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w2v_1 = gensim.models.Word2Vec.load('./Word-Representations/w2v_1.model')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Or by instantiating a new `Word2Vec` object and calling either create or load"
+    "Load an existing model:"
    ]
   },
   {
@@ -1099,19 +1075,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Word2Vec' object has no attribute 'get_average_doc_embedding'",
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 16.9 GiB for an array with shape (15092865, 300) and data type float32",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[54], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m corpus_embeddings \u001b[39m=\u001b[39m [w2v_1\u001b[39m.\u001b[39mget_average_doc_embedding(doc) \u001b[39mfor\u001b[39;00m doc \u001b[39min\u001b[39;00m d\u001b[39m.\u001b[39mpp_df[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]]\n",
-      "Cell \u001b[0;32mIn[54], line 1\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0m corpus_embeddings \u001b[39m=\u001b[39m [w2v_1\u001b[39m.\u001b[39;49mget_average_doc_embedding(doc) \u001b[39mfor\u001b[39;00m doc \u001b[39min\u001b[39;00m d\u001b[39m.\u001b[39mpp_df[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]]\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Word2Vec' object has no attribute 'get_average_doc_embedding'"
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[60], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m corpus_embeddings \u001b[39m=\u001b[39m [w2v_1\u001b[39m.\u001b[39mget_average_doc_embedding(doc) \u001b[39mfor\u001b[39;00m doc \u001b[39min\u001b[39;00m d\u001b[39m.\u001b[39mpp_df[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]]\n",
+      "Cell \u001b[0;32mIn[60], line 1\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0m corpus_embeddings \u001b[39m=\u001b[39m [w2v_1\u001b[39m.\u001b[39;49mget_average_doc_embedding(doc) \u001b[39mfor\u001b[39;00m doc \u001b[39min\u001b[39;00m d\u001b[39m.\u001b[39mpp_df[\u001b[39m'\u001b[39m\u001b[39mppBody\u001b[39m\u001b[39m'\u001b[39m]]\n",
+      "Cell \u001b[0;32mIn[58], line 19\u001b[0m, in \u001b[0;36mWord2Vec.get_average_doc_embedding\u001b[0;34m(self, document)\u001b[0m\n\u001b[1;32m     16\u001b[0m         embeddings\u001b[39m.\u001b[39mappend(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrepresentation\u001b[39m.\u001b[39mwv[word])\n\u001b[1;32m     18\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(embeddings) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m---> 19\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49mmean(embeddings, axis\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m)\n\u001b[1;32m     20\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     21\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mzeros(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrepresentation\u001b[39m.\u001b[39mvector_size)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/core/fromnumeric.py:3504\u001b[0m, in \u001b[0;36mmean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m   3501\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   3502\u001b[0m         \u001b[39mreturn\u001b[39;00m mean(axis\u001b[39m=\u001b[39maxis, dtype\u001b[39m=\u001b[39mdtype, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m-> 3504\u001b[0m \u001b[39mreturn\u001b[39;00m _methods\u001b[39m.\u001b[39;49m_mean(a, axis\u001b[39m=\u001b[39;49maxis, dtype\u001b[39m=\u001b[39;49mdtype,\n\u001b[1;32m   3505\u001b[0m                       out\u001b[39m=\u001b[39;49mout, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/core/_methods.py:102\u001b[0m, in \u001b[0;36m_mean\u001b[0;34m(a, axis, dtype, out, keepdims, where)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_mean\u001b[39m(a, axis\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, dtype\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, out\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, keepdims\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, \u001b[39m*\u001b[39m, where\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m--> 102\u001b[0m     arr \u001b[39m=\u001b[39m asanyarray(a)\n\u001b[1;32m    104\u001b[0m     is_float16_result \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    106\u001b[0m     rcount \u001b[39m=\u001b[39m _count_reduce_items(arr, axis, keepdims\u001b[39m=\u001b[39mkeepdims, where\u001b[39m=\u001b[39mwhere)\n",
+      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 16.9 GiB for an array with shape (15092865, 300) and data type float32"
      ]
     }
    ],
@@ -1121,11 +1100,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18651, 3)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.pp_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier_1 = Classifier(d, 'tfidf')"
+    "classifier_1 = Classifier(d, w2v_1)"
    ]
   },
   {
